# RocketProject

./: .gitignore  .pre-commit-config.yaml  readme.md
.github/workflows/: default.yaml
api/: Dockerfile  Makefile  dev.env  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  pytest.ini  wait-for-dependencies.py
api/rocket/: asgi.py  celery.py  urls.py  wsgi.py
api/rocket/apps/common/: __init__.py  generate_qr.py
api/rocket/apps/contacts/: admin.py  apps.py  serializers.py
api/rocket/apps/contacts/migrations/: 0001_initial.py
api/rocket/apps/contacts/models/: __init__.py  adress.py  contact.py
api/rocket/apps/objects/: admin.py  apps.py  choices.py  filters.py  serializers.py  tasks.py  urls.py  views.py
api/rocket/apps/objects/management/: __init_.py
api/rocket/apps/objects/management/commands/: _factory.py  demo_db.py
api/rocket/apps/objects/migrations/: 0001_initial.py  0002_alter_chainobject_name.py
api/rocket/apps/objects/models/: __init__.py  chain_object.py
api/rocket/apps/objects/static/objects/: script.js
api/rocket/apps/objects/templates/objects/: index.html
api/rocket/apps/products/: admin.py  apps.py  serializers.py  urls.py  views.py
api/rocket/apps/products/migrations/: 0001_initial.py  0002_alter_product_name.py
api/rocket/apps/products/models/: product.py
api/rocket/apps/users/: admin.py  apps.py  serializers.py
api/rocket/apps/users/migrations/: 0001_initial.py
api/rocket/apps/users/models/: __init__.py  employer.py  user.py
api/rocket/settings/: __init__.py  celery.py  django.py  djoser.py  jwt.py  rest_framework.py  rocket.py  sentry.py
api/tests/: test_objects.py  test_products.py
